Flex gap fixed

--- a/global.css
+++ b/global.css
@@ -363,6 +363,7 @@ img {
 
 .portfolio {
   height: 90vh;
+  padding-top: 5rem;
 }
 
 .portfolio__content {
@@ -774,10 +775,10 @@ body.dark-theme {
   margin-top: 1rem;
   display: flex;
   justify-content: center;
-  gap: 1rem;
 }
 
 .portfolio__fields span {
+  margin: 0 0.5rem;
   background-color: var(--brand);
   color: var(--white);
   padding: 0.5rem;
@@ -789,7 +790,6 @@ body.dark-theme {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 0.5rem;
 }
 
 .portfolio__fields span:hover {
@@ -797,6 +797,7 @@ body.dark-theme {
 }
 
 .proyectItem__tech {
+  margin-top: 0.5rem;
   display: flex;
   justify-content: space-around;
 }
